Added categories route
